--- a/Svc.ApiGateway/Svc.ApiGateway.csproj
+++ b/Svc.ApiGateway/Svc.ApiGateway.csproj
@@ -65,6 +65,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.Extensions" />
