--- a/Svc.Auction/Svc.Auction.csproj
+++ b/Svc.Auction/Svc.Auction.csproj
@@ -67,6 +67,7 @@
       <HintPath>..\packages\Microsoft.ServiceFabric.5.0.135\lib\net45\System.Fabric.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.Extensions" />
