--- a/Svc.Auction/packages.config
+++ b/Svc.Auction/packages.config
@@ -1,8 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net451" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.Host.HttpListener" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.ServiceFabric" version="5.0.135" targetFramework="net451" />
   <package id="Microsoft.ServiceFabric.Data" version="2.0.135" targetFramework="net451" />
   <package id="Microsoft.ServiceFabric.Services" version="2.0.135" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net451" />
+  <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="System.Collections" version="4.0.11-beta-23516" targetFramework="net451" />
   <package id="System.Collections.Immutable" version="1.1.38-beta-23516" targetFramework="net451" />
   <package id="System.Diagnostics.Debug" version="4.0.11-beta-23516" targetFramework="net451" />
