--- a/Svc.Auction/packages.config
+++ b/Svc.Auction/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net451" />
@@ -20,4 +21,5 @@
   <package id="System.Runtime" version="4.0.21-beta-23516" targetFramework="net451" />
   <package id="System.Runtime.Extensions" version="4.0.11-beta-23516" targetFramework="net451" />
   <package id="System.Threading" version="4.0.11-beta-23516" targetFramework="net451" />
+  <package id="Unity" version="4.0.1" targetFramework="net451" />
 </packages>
