--- a/Libraries/Common/packages.config
+++ b/Libraries/Common/packages.config
@@ -3,6 +3,7 @@
   <package id="Microsoft.ServiceFabric" version="5.0.135" targetFramework="net451" />
   <package id="Microsoft.ServiceFabric.Data" version="2.0.135" targetFramework="net451" />
   <package id="Microsoft.ServiceFabric.Services" version="2.0.135" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net451" />
   <package id="System.Collections" version="4.0.11-beta-23516" targetFramework="net451" />
   <package id="System.Collections.Immutable" version="1.1.38-beta-23516" targetFramework="net451" />
   <package id="System.Diagnostics.Debug" version="4.0.11-beta-23516" targetFramework="net451" />
