--- a/Svc.ApiGateway/packages.config
+++ b/Svc.ApiGateway/packages.config
@@ -3,4 +3,5 @@
   <package id="Microsoft.ServiceFabric" version="5.0.135" targetFramework="net451" />
   <package id="Microsoft.ServiceFabric.Data" version="2.0.135" targetFramework="net451" />
   <package id="Microsoft.ServiceFabric.Services" version="2.0.135" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net451" />
 </packages>
